src/Components/Home.css
/* Header */
.home-header {
    text-align: center;
    padding: 30px 0;
    margin-bottom: 20px;
    border-radius: 10px;
}

.home-header h1 {
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    background: linear-gradient(90deg, #4caf50, #0e76a8);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
}

.home-header p {
    font-size: 1rem;
    color: white;
    margin: 15px 0;
    line-height: 1.6;
}

.links-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2%;
    padding: 3% 0;
}

.home-link {
    font-size: 1rem;
    text-decoration: none;
    padding: 1.5% 3%;
    border-radius: 5px;
    color: white;
    background: #444;
}

.home-link:hover {
    background: #666;
    transform: translateY(-3px);
}

.home-link.linkedin {
    background: #084a8a;
}

.home-link.linkedin:hover {
    background: #0e76a8;
}

.home-link.github {
    background: #444;
}

.home-link.github:hover {
    background: #555;
}

.home-link.amazon {
    background: #b36b00;
}

.home-link.amazon:hover {
    background: #ff9900;
}

/* About me Section after bootstrap addition */

.about-me {
    background-color: #ff69b4;
    padding: 5vh 10vw;
    color: #fff;
}


.about-text {
    font-size: 1.2rem;
    line-height: 1.6;
}

.about-text h1 {
    font-size: 3rem;
    font-weight: bold;
    color: #000;
}

.about-text p {
    margin: 10px 0;
    color: #fff;
}


.about-me-image.linkedin-image {
    border: 3px solid white;
}


.Education {
    overflow: hidden;
    flex-wrap: wrap;
    position:relative;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #4682b4;
    padding: 5vh 10vw;
    color: #fff;
}

.education-content {
    flex-wrap: wrap;
    margin-top: 20vh;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5%;
    max-width: 1300px;
    width: 100%;
}

.education-text {
    flex: 1;
    text-align: left;
    font-size: 1.2rem;
    line-height: 1.6;
}

.education-text h1 {
    text-align: left;
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 20px;
    color: #fff;
}

.education-text p {
    margin: 10px 0;
    color: #f0f0f0;
}

.education-images {
    margin-top: 15vh;
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

.ferguson-image {
    max-width: 30vh;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.uf-image {
    max-width: 40vh;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.ferguson-image:hover {
    transform: scale(1.05);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}

.uf-image:hover {
    transform: scale(1.05);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}


.custom-shape-divider-top-1737780762 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1737780762 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 194px;
}

.custom-shape-divider-top-1737780762 .shape-fill {
    fill: #FF69B4;
}

.Projects {
    overflow: visible;
    flex-wrap: wrap;
    background: #FFA500;
    padding-bottom: 120px;
    padding-top: 200px;
    position:relative;
}

.custom-shape-divider-top-1737781272 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
}

.custom-shape-divider-top-1737781272 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 112px;
}

.custom-shape-divider-top-1737781272 .shape-fill {
    fill: #4682B4;
}

.Projects h1{
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 20px;
    color: #fff;
}
.project-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
}

.project-card {
    background-color: rgb(247, 146, 5);
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    padding: 20px;
    width: 300px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.project-card:hover {
    transform: translateY(-10px);
    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
}

.project-card h3 {
    font-size: 1.5rem;
    margin-bottom: 10px;
    color: white;
}

.project-card p {
    font-size: 0.9rem;
    margin-bottom: 10px;
    color: white;
}

.project-card ul {
    list-style-type: disc;
    padding-left: 20px;
    margin: 0;
}

.project-card li {
    font-size: 0.9rem;
    margin-bottom: 5px;
    color: white;
}

/* Skills Section */


.Skills {
    overflow: visible;
    position: relative;
    background: #32CD32;
    padding: 10vh 10vw;
    color: #fff;
}

.custom-shape-divider-top-1737781070 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1737781070 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 130px;
}

.custom-shape-divider-top-1737781070 .shape-fill {
    fill: #FFA500;
}

.Skills-content {
    display: flex;
    align-items: center; /* centers text vertically */
    justify-content: center;
    gap: 15%;
    max-width: 1300px;
    width: 100%;
    margin: 0 auto;
    min-height: 70vh; /* makes it taller and balanced */
}

.Skills-text {
    flex: 1.2;
    text-align: left;
    font-size: 1.2rem;
    line-height: 1.7;
    color: #f0f0f0;
}

.Skills-text h1 {
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 30px;
    color: #fff;
}

.Skills-text p {
    margin: 15px 0;
}

.Skills-images {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 25px;
    margin-top: 120px;
}

.coding-image {
    width: 150px;
    border-radius: 12px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.coding-image:hover {
    transform: scale(1.05);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
}



/* Timeline Section */


.timeline-section {
    overflow: visible;
    display:flex;
    flex-direction: column;
    background: #9400D3;
    padding: 80px 10vw;
    position: relative;
}

.timeline-content {
    overflow: visible;
    flex-wrap: wrap;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 40px;
}

.timeline {
    flex: 2;
    min-width: 40%;
    padding: 20px;
}

.timeline h1{
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 20px;
    color: #fff;

}
.timeline p {
    color: white;
}

.timeline .MuiTypography-h6 {
    font-size: 1.3rem;
}

.timeline .MuiTypography-body2 {
    font-size: 0.8rem;
}

.MuiTimelineItem-root {
    margin-bottom: 10px;
}

.timeline .MuiTimelineDot-root {
    transform: scale(1.5);
}

.timeline .MuiTimelineConnector-root {
    background-color: white;
    height: 40px;
}

.custom-shape-divider-top-1737781375 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1737781375 svg {
    position: relative;
    display: block;
    width: calc(148% + 1.3px);
    height: 119px;
}

.custom-shape-divider-top-1737781375 .shape-fill {
    fill: #32CD32;
}
.image-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 40px;
    flex: 1;
}

.work-image,
.store-image {
    max-width: 120%;
    min-width: 25vh;
    height: auto;
    border-radius: 15px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.work-image:hover,
.store-image:hover {
    transform: scale(1.1);
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
    cursor: pointer;
}

.map-section {
    background-color: #555;
    width: 100%;
    min-height: 100vh;
    padding: 150px 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    position: relative;
  }

  .custom-shape-divider-top-1761695006 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1761695006 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 110px;
}

.custom-shape-divider-top-1761695006 .shape-fill {
    fill: #9400D3;
}

  .MapHeader {
    width: 80%;
    margin: 0 auto;
  }
  
  .MapHeader h1 {
    font-size: 3rem;
    font-weight: bold;
    color: #ffffff;
    margin-bottom: 40px;
    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
  }
  
  .map-container {
    width: 100%;
    height: 80vh;
    border-radius: 10px;
    overflow: hidden;
    margin: 0 auto;
  }
  
  .mapboxgl-canvas {
    width: 100%;
    height: 100%;
    border-radius: 15px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
  }
  

